--- a/{{cookiecutter.app_name}}/package.json
+++ b/{{cookiecutter.app_name}}/package.json
@@ -38,7 +38,10 @@
     "concurrently": "^5.0.0",
     "css-loader": "^3.0.0",
     "eslint": "^6.2.2",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-import": "^2.17.3",
     "file-loader": "^4.0.0",
     "less": "^3.9.0",
