--- a/{{cookiecutter.app_name}}/package.json
+++ b/{{cookiecutter.app_name}}/package.json
@@ -32,18 +32,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.0.0",
-    "eslint": "^6.2.2",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-import": "^2.17.3",
     "file-loader": "^4.0.0",
+    "standard": "^14.3.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
